# iceframe

./: .env.example  .gitignore  README.md  architecture.md  check_sig.py  check_txn.py  check_txn_inst.py  combine_docs.py  pyproject.toml  test_catalog.py
docs/: advanced_features.md  ai_agent.md  async.md  branching.md  catalog_ops.md  cli.md  creating_tables.md  data_quality.md  data_quality_enhanced.md  datafusion.md  deleting_tables.md  dependencies.md  distributed.md  export.md  incremental.md  ingest.md  ingest_advanced.md  ingest_api.md  ingest_clipboard.md  ingest_folder.md  ingest_html.md  ingest_huggingface.md  ingest_native.md  ingest_optional.md  ingestion.md  joins.md  lazy_reading.md  maintenance.md  mcp.md  namespaces.md  native_maintenance.md  notebooks.md  partitioning.md  pydantic.md  query_builder.md  reading_tables.md  rollback.md  scalability.md  schema_evolution.md  statistics.md  (+4 more)
docs/recipes/: data_quality_gate.md  etl_pipeline.md  incremental_ingestion.md  scd_type_2.md
iceframe/: branching.py  cli.py  compaction.py  core.py  gc.py  ingest.py  memory.py  operations.py  procedures.py  quality.py  query.py  streaming.py
tests/: conftest.py  test_advanced_features.py  test_branching.py  test_ingest_unit.py  test_scalability.py
tests/integration/: test_ingest_native_live.py  test_ingest_new_live.py  test_ingest_optional_live.py  test_quality_live.py  test_visualization_live.py
